hello/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: hello-namespace
  name: hello-namespace
spec:
  finalizers:
  - kubernetes
