hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  namespace: hello
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: nginx
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
