hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  namespace: hello
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - name: hello-nodeport
    port: 8029
    targetPort: 80
    #nodePort: 30081
  type: NodePort
