hello/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress 
  namespace: hello-namespace
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: helloweb
          servicePort: 8009
